--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,15 @@
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="tailwind.css" />
-    <link rel="stylesheet" href="custom.css" />
-  </head>
-  <body>
-    <div id="frame" class="p-3">
-      <h1 id="heading" class="text-xl font-semibold text-gray-900 pb-1">AutoFill Uploads for PromptHero</h1>
-      <p class="mb-3 text-gray-900">
-        You've got version 1.0.3 <br>Check for new versions here: <a id="search-results-link" class="text-blue-600 cursor-pointer" href="https://github.com/HE1CO/autofill-prompthero-uploads" target="_blank">GitHub Link</a>.
-      </p>
-      <p class="mb-3 text-gray-900">
-        This extension is not endorsed by or affiliated with PromptHero.
-      </p>
-    </div>
-  </body>
+    <head>
+        <link rel="stylesheet" href="tailwind.css" />
+        <link rel="stylesheet" href="custom.css" />
+    </head>
+    <body>
+        <div id="frame" class="p-3">
+            <h1 id="heading" class="text-xl font-semibold text-gray-900 mb-2">Postie - Autofill AI Art Uploads</h1>
+            <p class="text-sm text-gray-900">Supported sites: <a class="text-blue-600 cursor-pointer" href="https://prompthero.com/prompt/upload" target="_blank">prompthero.com</a>, <a class="text-blue-600 cursor-pointer" href="https://openart.ai/post" target="_blank">openart.ai</a>, <a class="text-blue-600 cursor-pointer" href="https://arthub.ai/upload" target="_blank">arthub.ai</a></p>
+            <p class="text-sm text-gray-900">You've got version 1.1.0</p>
+            <p class="mb-3 text-sm text-gray-900">Check for new versions here: <a class="text-blue-600 cursor-pointer" href="https://github.com/HE1CO/postie" target="_blank">GitHub</a></p>
+            <p class="mb-3 text-xs text-gray-400">Disclaimer: This extension is not endorsed by or affiliated with PromptHero, OpenArt, or ArtHub.</p>
+        </div>
+    </body>
 </html>
