--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,26 @@
-<html lang="en">
-    <head>
-        <link rel="stylesheet" href="tailwind.css" />
-        <link rel="stylesheet" href="custom.css" />
-    </head>
-    <body>
-        <div id="frame" class="p-3">
-            <h1 id="heading" class="text-xl font-semibold text-gray-900 mb-2">Postie - Autofill AI Art Uploads</h1>
-            <p class="text-sm text-gray-900">Supported sites: <a class="text-blue-600 cursor-pointer" href="https://prompthero.com/prompt/upload" target="_blank">prompthero.com</a>, <a class="text-blue-600 cursor-pointer" href="https://openart.ai/post" target="_blank">openart.ai</a>, <a class="text-blue-600 cursor-pointer" href="https://arthub.ai/upload" target="_blank">arthub.ai</a></p>
-            <p class="text-sm text-gray-900">You've got version 1.1.0</p>
-            <p class="mb-3 text-sm text-gray-900">Check for new versions here: <a class="text-blue-600 cursor-pointer" href="https://github.com/HE1CO/postie" target="_blank">GitHub</a></p>
-            <p class="mb-3 text-xs text-gray-400">Disclaimer: This extension is not endorsed by or affiliated with PromptHero, OpenArt, or ArtHub.</p>
-        </div>
-    </body>
-</html>
+<div style="width: 390px; padding: 0 .75rem">
+
+    <h1 style="margin: .75rem 0 .5rem; font-size: 1.25rem">Postie - Autofill AI Art Uploads</h1>
+
+    <p style="font-size: .875rem; line-height: 1.25rem">
+        Supported sites:
+        <a href="https://prompthero.com/prompt/upload" target="_blank">prompthero.com</a>,
+        <a href="https://openart.ai/post" target="_blank">openart.ai</a>,
+        <a href="https://arthub.ai/upload" target="_blank">arthub.ai</a>
+
+        <br> You've got version 2.0.0
+
+        <br> Check for new versions on
+        <a href="https://github.com/HE1CO/postie" target="_blank">GitHub</a>
+    </p>
+
+    <footer style="margin: .75rem 0 1.5rem; font-size: .75rem; color: rgb(156, 163, 175)">
+        Disclaimer: This extension is not endorsed by or affiliated with PromptHero, OpenArt, or ArtHub.
+    </footer>
+
+</div>
+
+<style>
+    body { font-family: system-ui, sans-serif; margin: 0; }
+    a { text-decoration: none; color: rgb(37, 99, 235); }
+</style>
