--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
   <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
   <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet">
 
+  <link href="./prompt-upload.css" rel="stylesheet">
+
 
   <script type="importmap" data-turbo-track="reload">{
     "imports": {
