--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
   <title>PromptHero - Prompt Metadata Checker</title>
 
+  <!-- JQUERY -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous" defer></script>
+
   <!-- FONTAWESOME -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
@@ -29,12 +33,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   </noscript>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"
+    integrity="sha512-ubuT8Z88WxezgSqf3RLuNi5lmjstiJcyezx34yIU2gAHonIi27Na7atqzUZCOoY4CExaoFumzOsFQ2Ch+I/HCw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+    integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous" defer>
+  </script>
 
   <!-- FILEPOND -->
   <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
   <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet">
 
   <link href="./prompt-upload.css" rel="stylesheet">
+
+
+  <script src="./javascript/vendor/pngtoy.min.js"></script>
 
 
   <script type="importmap" data-turbo-track="reload">{
@@ -48,7 +61,9 @@
       "filepond": "https://ga.jspm.io/npm:filepond@4.30.4/dist/filepond.js",
       "filepond-plugin-image-preview": "https://ga.jspm.io/npm:filepond-plugin-image-preview@4.6.11/dist/filepond-plugin-image-preview.js",
       "filepond-plugin-image-resize": "https://ga.jspm.io/npm:filepond-plugin-image-resize@2.0.10/dist/filepond-plugin-image-resize.js",
-      "filepond-plugin-file-validate-type": "https://ga.jspm.io/npm:filepond-plugin-file-validate-type@1.2.8/dist/filepond-plugin-file-validate-type.js"
+      "filepond-plugin-file-validate-type": "https://ga.jspm.io/npm:filepond-plugin-file-validate-type@1.2.8/dist/filepond-plugin-file-validate-type.js",
+      "vendor/he1co_postie/model_hashes": "./src/vendor/he1co_postie/model_hashes.js",
+      "vendor/he1co_postie/prompt_info": "./src/vendor/he1co_postie/prompt_info.js"
     }
   }</script>
 
