Add link to PromptHero

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
         <div class="col-6 ">
           <div class="prompt-upload-metadata-area h-100">
 
-            <h1>Prompt Metadata Checker <span style="font-size: 14px;">by PromptHero</span></h1>
+            <h1>Prompt Metadata Checker <a href="https://prompthero.com"><span style="font-size: 14px;">by
+                  PromptHero</span></a></h1>
 
             <div class="prompt-upload-form-area">
               <div class="form-group mt-3">
