Start making new Postie code work

--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
       "filepond-plugin-image-resize": "https://ga.jspm.io/npm:filepond-plugin-image-resize@2.0.10/dist/filepond-plugin-image-resize.js",
       "filepond-plugin-file-validate-type": "https://ga.jspm.io/npm:filepond-plugin-file-validate-type@1.2.8/dist/filepond-plugin-file-validate-type.js",
       "vendor/he1co_postie/model_hashes": "./src/vendor/he1co_postie/model_hashes.js",
-      "vendor/he1co_postie/prompt_info": "./src/vendor/he1co_postie/prompt_info.js"
+      "vendor/he1co_postie/prompt_info": "./src/vendor/he1co_postie/prompt_info.js",
+      "vendor/postie/findModelByHash": "./src/vendor/postie/findModelByHash.js",
+      "vendor/postie/findSamplerByName": "./src/vendor/postie/findSamplerByName.js",
+      "vendor/postie/getTextFromImage": "./src/vendor/postie/getTextFromImage.js",
+      "vendor/postie/hashes": "./src/vendor/postie/hashes.js",
+      "vendor/postie/parseMetadata": "./src/vendor/postie/parseMetadata.js"
     }
   }</script>
 
