Rename `modelHashes` for clarity

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       "filepond-plugin-file-validate-type": "https://ga.jspm.io/npm:filepond-plugin-file-validate-type@1.2.8/dist/filepond-plugin-file-validate-type.js",
       "vendor/postie/exifMetadataExtractor": "./src/vendor/postie/exifMetadataExtractor.js",
       "vendor/postie/dataEnricher": "./src/vendor/postie/dataEnricher.js",
-      "vendor/postie/hashes": "./src/vendor/postie/hashes.js",
+      "vendor/postie/modelHashes": "./src/vendor/postie/modelHashes.js",
       "vendor/postie/parseMetadata": "./src/vendor/postie/parseMetadata.js"
     }
   }</script>
