--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     <label for="prompt_metadata_upscaler">Upscaler</label>
                     <select class="form-control" name="prompt[metadata][upscaler]" id="prompt_metadata_upscaler"
                       data-prompts--upload-target="upscaler">
-                      <option value="">-- Select Sampler --</option>
+                      <option value="">-- Select Upscaler --</option>
                       <option value="ESRGAN 4x">ESRGAN 4x</option>
                       <option value="CodeFormer">CodeFormer</option>
                     </select>
